On branch main Your branch is up to date with 'origin/main'. Changes to be committed: modified:   v1.2.2 ~ v1.4.0 .CSS

--- a/v1.2.2 ~ v1.4.0 .CSS
+++ b/v1.2.2 ~ v1.4.0 .CSS
@@ -17,7 +17,7 @@
 
 
 /*  新增  */
-  /*  < 规则 >  */
+  /*  < @规则 >  */
  @color-profile | @container | @font-palette-values
   /*  < 元素 >  */
  svg{} | image{} | xmp{} | shadow{} | slot{} | marquee{} | math{} | bgsound{} | rtc{} | data{} | noembed{} | portal{} | nobr{} | content{} | menuitem{} | plaintext{} | rb{}
